--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,3 +1,15 @@
 PORT=4000
 
 DB_URI=mongodb+srv://pathakshubham28122001:Shubhpat@cluster0.q8th3ml.mongodb.net/
+
+JWT_SECRET=HFDGBIUERHGFDSBVNERIHFDHJGJ
+
+JWT_EXPIRE=5d
+
+COOKIE_EXPIRE=5
+
+SMPT_SERVICE=gmail
+
+SMPT_MAIL =shubhpat0123@gmail.com
+
+SMPT_PASSWORD = 240F161C273AA3248CB38A5239EF3EF66E13
